fixed book overflow

--- a/cart-list.css
+++ b/cart-list.css
@@ -38,9 +38,8 @@
 }
 
 .list-book-cover{
-    height: 20vh;
-
-
+    height: 21vh;
+    width: 12vw;
     margin-top: 2vh;
     margin-bottom: 2vh;
     margin-left: 1.5vw;
